Create verifyEmail REST API
