# src/controllers/session.ts
@@ -11,7 +11,7 @@ export class SessionController {
    * @summary Get a user's session info
    */
   @Example<SessionResponse>({
-    name: 'John Doe',
+    username: 'John Doe',
     email: 'johndoe@example.com',
     address: '123 Main St'
   })
@@ -26,7 +26,7 @@ const session = async (req: UserRequest) => {
   const user = await User.findOne({ email })
   if (user) {
     return {
-      name: user.name,
+      username: user.username,
       email: user.email,
       address: user.address
     }
